--- a/estilo.css
+++ b/estilo.css
@@ -22,6 +22,8 @@ Asignatura: TPI 115 */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scrollbar-width:auto;
+    scrollbar-color: var(--bg-color) var(--secondary-color);
 }
 
 body {
@@ -99,12 +101,14 @@ body {
 #main{
     z-index: -1;
     opacity: 0;
+    display: none; 
 }	
 
 #main.active{
     opacity: 1;
     z-index: 0;
     display: flex; 
+    height: auto;
     transition: all 0.3s ease-in-out;
 }
 
@@ -156,9 +160,10 @@ main {
 }
 
 .container-table{   
-    max-height: 50vh; /* Altura máxima antes de que aparezca el scroll */
-    max-width: 80vw;  /* Ancho máximo antes de que aparezca el scroll */
-    overflow-y: auto; /* Muestra el scroll solo cuando sea necesario */
+    /* max-height: 50vh; */ /* Altura máxima antes de que aparezca el scroll */
+    /* max-width: 80vw;  */ /* Ancho máximo antes de que aparezca el scroll */
+    /* overflow-y: auto;  *//* Muestra el scroll solo cuando sea necesario */
+    height: auto;
     border: 2px solid #ddd; /* Borde alrededor del contenedor */
     border-radius: 5px; /* Borde redondeado */
 }
@@ -199,6 +204,117 @@ table img{
 
 table .container-img{
     background-color: var(--white);
+}
+
+#btn-eliminar{ 
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 1rem;
+    background-color: var(--white);
+    opacity: 1;
+    transition: opacity 0.3s;
+}
+
+#btn-eliminar:hover{
+    opacity: 0.7;
+    transition: all 0.3s;
+}
+
+
+/* AÑADIENDO LO DE AGREGAR PRODUCTO */
+#add-container{
+    opacity: 0;
+    transition: all 0.5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    background-color: #ffffff9c;
+    position: fixed;
+    top: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#add-container.active{
+    opacity: 1;
+    top: 50%;
+    transition: all 0.5s ease;
+}
+
+#add-product-form{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    place-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: var(--bg-color-2);
+    font-family: var (--primary-font);
+    width: 50vw;
+    height: 80vh;
+    max-height: 80vh; /* Altura máxima antes de que aparezca el scroll */
+    overflow-y: auto; /* Muestra el scroll solo cuando sea necesario */
+
+}	
+
+.option{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+}	
+
+#add-product-form input{
+    padding: 0.5rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 50%;
+    font-family: var(--primary-font);
+}
+
+#add-product-form #product-category{
+    padding: 0.5rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 50%;
+    font-family: var(--primary-font);
+}
+
+#add-product-form #product-image{  
+    width: 70%;
+}
+
+#add-product-form #product-description{  
+    width: 70%;
+    height: 20vh;
+    padding: 0.5rem;
+    text-align: left;
+    border: 1px solid black;
+    border-radius: 5px;
+}	
+
+#add-product-form button{
+    background-color: var(--quarter-color);
+    color: var(--white);
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 1rem;
+    font-weight: bold;
+    font-family: var(--primary-font);
+}
+
+#add-product-form button:hover{
+    background-color: var(--secondary-color);
 }
 
 .footer{
