--- a/estilo.css
+++ b/estilo.css
@@ -70,7 +70,7 @@ body {
 }
 
 /* APARECER TODO CON EL BOTON OBTENER PRODUCTOS*/
-.obtenerArt{
+#obtenerArt{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,7 +78,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+}
+
+#obtenerArt.active{
+    display: none;
 }
 
 #obtenerArt-btn{
@@ -299,6 +302,7 @@ table .container-img{
     text-align: left;
     border: 1px solid black;
     border-radius: 5px;
+    font-family: var(--primary-font);
 }	
 
 #add-product-form button{
@@ -344,3 +348,31 @@ table .container-img{
     height: 100%;
     object-fit: cover;
 }
+
+/* Estilos del contenedor */
+#spinner-container {
+    display: none;
+  }
+
+#spinner-container.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  /* Estilos del spinner */
+  .spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid rgba(0, 0, 0, 0.1);
+    border-top-color: #3498db;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+
+  /* Animación de rotación */
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
