--- a/estilo.css
+++ b/estilo.css
@@ -354,25 +354,14 @@ table .container-img{
     display: none;
   }
 
+  #spinner-container img{
+    width: 100px;
+    height: 100px;
+  }
+
 #spinner-container.active {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
-
-  /* Estilos del spinner */
-  .spinner {
-    width: 50px;
-    height: 50px;
-    border: 5px solid rgba(0, 0, 0, 0.1);
-    border-top-color: #3498db;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
-
-  /* Animación de rotación */
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
   }
