--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,7 @@ Asignatura: TPI 115 */
     --terciary-color: #D1E3FF;
     --quarter-color: #448846;
     --font-color: #ECECEC;
-    --bg-color:   #DCDCDC;
+    --bg-color: #DCDCDC;
     --bg-color-2: #A8BADC;
     --white: #ffff;
     --primary-font: "Nanum Gothic", sans-serif;
@@ -22,7 +22,7 @@ Asignatura: TPI 115 */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scrollbar-width:auto;
+    scrollbar-width: auto;
     scrollbar-color: var(--bg-color) var(--secondary-color);
 }
 
@@ -32,7 +32,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content: space-between;
 }
 
 .navbar {
@@ -43,7 +43,8 @@ body {
     color: var(--white);
     font-family: var(--primary-font);
     height: 6rem;
-    box-shadow: 0 0 10px rgba(1, 1, 1, 0.7);;
+    box-shadow: 0 0 10px rgba(1, 1, 1, 0.7);
+    ;
 }
 
 .personal-data {
@@ -57,20 +58,20 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1rem;
-}	
+}
 
 .navbar-icon {
     height: 100%;
 }
 
-.navbar-icon img{
+.navbar-icon img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 /* APARECER TODO CON EL BOTON OBTENER PRODUCTOS*/
-#obtenerArt{
+#obtenerArt {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -80,11 +81,11 @@ body {
     transform: translate(-50%, -50%);
 }
 
-#obtenerArt.active{
+#obtenerArt.active {
     display: none;
 }
 
-#obtenerArt-btn{
+#obtenerArt-btn {
     background-color: var(--quarter-color);
     color: var(--white);
     padding: 0.5rem 1rem;
@@ -97,20 +98,20 @@ body {
     font-family: var(--primary-font);
 }
 
-#obtenerArt-btn:hover{
+#obtenerArt-btn:hover {
     background-color: var(--secondary-color);
 }
 
-#main{
+#main {
     z-index: -1;
     opacity: 0;
-    display: none; 
-}	
+    display: none;
+}
 
-#main.active{
+#main.active {
     opacity: 1;
     z-index: 0;
-    display: flex; 
+    display: flex;
     height: auto;
     transition: all 0.3s ease-in-out;
 }
@@ -128,17 +129,17 @@ main {
     box-shadow: 0 0 10px rgba(1, 1, 1, 0.7);
 }
 
-.container-opt{
+.container-opt {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 80vw; 
+    max-width: 80vw;
     font-weight: bold;
     font-family: var(--primary-font);
 }
 
-.container-opt button{
+.container-opt button {
     background-color: var(--quarter-color);
     color: var(--white);
     padding: 0.5rem 1rem;
@@ -150,7 +151,7 @@ main {
     font-family: var(--primary-font);
 }
 
-.filtro-category select{
+.filtro-category select {
     padding: 0.5rem;
     border: 1px solid black;
     border-radius: 5px;
@@ -158,17 +159,22 @@ main {
     font-family: var(--primary-font);
 }
 
-.container-opt button:hover{
+.container-opt button:hover {
     background-color: var(--secondary-color);
 }
 
-.container-table{   
-    /* max-height: 50vh; */ /* Altura máxima antes de que aparezca el scroll */
-    /* max-width: 80vw;  */ /* Ancho máximo antes de que aparezca el scroll */
-    /* overflow-y: auto;  *//* Muestra el scroll solo cuando sea necesario */
+.container-table {
+    /* max-height: 50vh; */
+    /* Altura máxima antes de que aparezca el scroll */
+    /* max-width: 80vw;  */
+    /* Ancho máximo antes de que aparezca el scroll */
+    /* overflow-y: auto;  */
+    /* Muestra el scroll solo cuando sea necesario */
     height: auto;
-    border: 2px solid #ddd; /* Borde alrededor del contenedor */
-    border-radius: 5px; /* Borde redondeado */
+    border: 2px solid #ddd;
+    /* Borde alrededor del contenedor */
+    border-radius: 5px;
+    /* Borde redondeado */
 }
 
 table {
@@ -179,7 +185,7 @@ table {
     text-align: left;
     text-align: justify;
     font-weight: bold;
-    color: black;  
+    color: black;
 }
 
 table th {
@@ -189,7 +195,8 @@ table th {
 }
 
 /* Estilo de las celdas del encabezado */
-table th, table td {
+table th,
+table td {
     padding: 12px 15px;
     border: 1px solid black;
 }
@@ -200,16 +207,16 @@ table tbody tr {
 }
 
 /* Imagen en miniatura */
-table img{
+table img {
     width: 50px;
     height: auto;
 }
 
-table .container-img{
+table .container-img {
     background-color: var(--white);
 }
 
-#btn-eliminar{ 
+#btn-eliminar {
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 5px;
@@ -220,14 +227,14 @@ table .container-img{
     transition: opacity 0.3s;
 }
 
-#btn-eliminar:hover{
+#btn-eliminar:hover {
     opacity: 0.7;
     transition: all 0.3s;
 }
 
 
 /* AÑADIENDO LO DE AGREGAR PRODUCTO */
-#add-container{
+#add-container {
     opacity: 0;
     transition: all 0.5s ease;
     display: flex;
@@ -243,15 +250,15 @@ table .container-img{
     transform: translate(-50%, -50%);
 }
 
-#add-container.active{
+#add-container.active {
     opacity: 1;
     top: 50%;
     transition: all 0.5s ease;
 }
 
-#add-product-form{
+#add-product-form {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     place-items: center;
     gap: 1rem;
     padding: 1rem;
@@ -261,21 +268,23 @@ table .container-img{
     font-family: var (--primary-font);
     width: 50vw;
     height: 80vh;
-    max-height: 80vh; /* Altura máxima antes de que aparezca el scroll */
-    overflow-y: auto; /* Muestra el scroll solo cuando sea necesario */
+    max-height: 80vh;
+    /* Altura máxima antes de que aparezca el scroll */
+    overflow-y: auto;
+    /* Muestra el scroll solo cuando sea necesario */
 
-}	
+}
 
-.option{
+.option {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
     width: 100%;
-}	
+}
 
-#add-product-form input{
+#add-product-form input {
     padding: 0.5rem;
     border: 1px solid black;
     border-radius: 5px;
@@ -283,7 +292,7 @@ table .container-img{
     font-family: var(--primary-font);
 }
 
-#add-product-form #product-category{
+#add-product-form #product-category {
     padding: 0.5rem;
     border: 1px solid black;
     border-radius: 5px;
@@ -291,11 +300,11 @@ table .container-img{
     font-family: var(--primary-font);
 }
 
-#add-product-form #product-image{  
+#add-product-form #product-image {
     width: 70%;
 }
 
-#add-product-form #product-description{  
+#add-product-form #product-description {
     width: 70%;
     height: 20vh;
     padding: 0.5rem;
@@ -303,9 +312,9 @@ table .container-img{
     border: 1px solid black;
     border-radius: 5px;
     font-family: var(--primary-font);
-}	
+}
 
-#add-product-form button{
+#add-product-form button {
     background-color: var(--quarter-color);
     color: var(--white);
     padding: 0.5rem 1rem;
@@ -317,11 +326,11 @@ table .container-img{
     font-family: var(--primary-font);
 }
 
-#add-product-form button:hover{
+#add-product-form button:hover {
     background-color: var(--secondary-color);
 }
 
-.footer{
+.footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -330,20 +339,21 @@ table .container-img{
     color: var(--white);
     font-family: var(--primary-font);
     height: 6rem;
-    box-shadow: 0 0 10px rgba(1, 1, 1, 0.7);;
+    box-shadow: 0 0 10px rgba(1, 1, 1, 0.7);
+    ;
     text-align: center;
 }
 
-.footer-icon{
+.footer-icon {
     height: 100%;
     margin: 0 3rem;
 }
 
-.info-footer{
+.info-footer {
     font-size: small;
 }
 
-.footer-icon img{
+.footer-icon img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -352,16 +362,65 @@ table .container-img{
 /* Estilos del contenedor */
 #spinner-container {
     display: none;
-  }
+}
 
-  #spinner-container img{
+#spinner-container img {
     width: 100px;
     height: 100px;
-  }
+}
 
 #spinner-container.active {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
+}
+
+#alerta-container {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+#alerta-container.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff9c;
+    width: 100vw;
+    height: 100vh;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+.alerta-options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    font-family: var(--primary-font);
+    padding: 2rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: var(--bg-color-2);
+}
+
+.alerta-options button {
+    background-color: var(--quarter-color);
+    color: var(--white);
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-family: var(--primary-font);
+}
+
+.alerta-options button:hover {
+    background-color: var(--secondary-color);
+}
